# mppi_playground

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  main.py  pyproject.toml
.devcontainer/: devcontainer.json
.devcontainer/cpu/: devcontainer.json
.devcontainer/gpu/: devcontainer.json
.github/workflows/: pre-commit.yml
app/: cartpole.py  catpole.py  genesis_go2.py  goal_in_danger_zone.py  mountaincar.py  mujoco_cartpole.py  navigation2d.py  pendulum.py  racing.py
docker/: Dockerfile
docker/cpu/: Dockerfile
docker/gpu/: Dockerfile
example/: cartpole.py  goal_in_danger_zone.py  mountaincar.py  mujoco_cartpole.py  navigation2d.py  pendulum.py  racing.py
src/controller/: mppi.py
src/envs/: goal_in_danger_zone.py  lane_map_2d.py  navigation_2d.py  obstacle_map_2d.py  racing_env.py  reference_trajectory.py
src/envs/circuit_generator/: circuit.csv  path_generate.py  utils.py
src/envs/genesis/: go2_env.py
src/mppi_playground/: __init__.py  mppi.py
src/pi_mpc/: __init__.py  mppi.py
tests/: test_brax.py  test_genesis.py  test_gui.py  test_mujoco.py  test_torch.py
