[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["pi_mpc"]

[project]
name = "pi-mpc"
version = "0.1.0"
description = "PyTorch implementation of Model Predictive Path Integral (MPPI) Control with GPU acceleration"
requires-python = ">=3.10,<3.14"
dependencies = [
    "torch>=2.5.0",
]

[project.optional-dependencies]
example = [
    "fire>=0.7.1",
    "gymnasium[all]>=1.2.3",
    "matplotlib>=3.10.8",
    "moviepy>=2.2.1",
    "mujoco>=3.4.0",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pyqt5>=5.15.11",
    "tqdm>=4.67.1",
]

[tool.uv]
dev-dependencies = [
    "pre-commit>=4.5.1",
    "ruff>=0.14.13",
    "ty>=0.0.12",
]
